--- a/code/package.json
+++ b/code/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": " node Backend/server.js",
-    "server": " nodemon backend/server.js"
+    "server": " nodemon Backend/server.js"
   },
   "author": "e18203-e18264-e18375",
   "license": "MIT",
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
