--- a/code/Frontend/package.json
+++ b/code/Frontend/package.json
@@ -12,7 +12,9 @@
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "expo-linear-gradient": "~12.0.1",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
