--- a/code/Frontend/package.json
+++ b/code/Frontend/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@expo/status-bar-height": "^0.0.1",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "expo": "~47.0.8",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
-    "expo-font": "~11.0.1",
-    "expo-app-loading": "~2.1.1"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
