--- a/code/Frontend/package.json
+++ b/code/Frontend/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-blur": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
