GPS module codded to firmware

--- a/code/firmware/platformio.ini
+++ b/code/firmware/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = seeed-studio/Accelerometer ADXL335@^1.0.0
+lib_deps = 
+	seeed-studio/Accelerometer ADXL335@^1.0.0
+	mikalhart/TinyGPSPlus@^1.0.3
