--- a/code/firmware/platformio.ini
+++ b/code/firmware/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	seeed-studio/Accelerometer ADXL335@^1.0.0
 	mikalhart/TinyGPSPlus@^1.0.3
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
