--- a/code/Frontend/package.json
+++ b/code/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/status-bar-height": "^0.0.1",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "axios": "^1.2.1",
@@ -22,12 +23,12 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-expo-swipe-button": "^1.0.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
