--- a/code/Frontend/app.json
+++ b/code/Frontend/app.json
@@ -7,9 +7,9 @@
     "icon": "./app/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./app/assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./app/assets/Startup.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#1C1B33"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
