--- a/code/Frontend/package.json
+++ b/code/Frontend/package.json
@@ -12,6 +12,7 @@
     "@expo/status-bar-height": "^0.0.1",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "axios": "^1.2.1",
