--- a/code/firmware/platformio.ini
+++ b/code/firmware/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	mikalhart/TinyGPSPlus@^1.0.3
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	paulstoffregen/AltSoftSerial@^1.4
+	bblanchon/ArduinoJson@^6.20.0
